Cleaning up jetty-start test cases.
+ Using modern techniques
+ Eliminating use of deprecated classes and methods.
+ Using Path were we can.