@@ -13,11 +13,7 @@
 
 package org.eclipse.jetty.start.usecases;
 
-import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -25,6 +21,7 @@ import java.util.Set;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.junit.jupiter.api.Test;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -38,51 +35,47 @@ public class DynamicDependTest extends AbstractUseCase
 
         FS.ensureDirExists(baseDir.resolve("modules/impl"));
         FS.ensureDirExists(baseDir.resolve("modules"));
-        Files.write(baseDir.resolve("modules/dynamic.mod"),
-            Arrays.asList(
-                "[depend]",
-                "main",
-                "impl/dynamic-${java.version}"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/impl/dynamic-1.7.0_31.mod"),
-            Arrays.asList(
-                "[ini]",
-                "dynamic=1.7.0_31-from-mod"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/impl/dynamic-1.8.0_05.mod"),
-            Arrays.asList(
-                "[ini]",
-                "dynamic=1.8.0_05_from_mod"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/dynamic.mod"),
+            """
+            [depend]
+            main
+            impl/dynamic-${java.version}
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/impl/dynamic-1.7.0_31.mod"),
+            """
+            [ini]
+            dynamic=1.7.0_31-from-mod
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/impl/dynamic-1.8.0_05.mod"),
+            """
+            [ini]
+            dynamic=1.8.0_05_from_mod
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Arrays.asList(
+        List<String> runArgs = List.of(
             "java.version=1.7.0_31",
             "--modules=dynamic"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/main.xml".replace('/', File.separatorChar)
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/main.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/other.jar".replace('/', File.separatorChar)
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
@@ -102,51 +95,47 @@ public class DynamicDependTest extends AbstractUseCase
 
         FS.ensureDirExists(baseDir.resolve("modules/impl"));
         FS.ensureDirExists(baseDir.resolve("modules"));
-        Files.write(baseDir.resolve("modules/dynamic.mod"),
-            Arrays.asList(
-                "[depend]",
-                "main",
-                "impl/dynamic-${java.version}"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/impl/dynamic-1.7.0_31.mod"),
-            Arrays.asList(
-                "[ini]",
-                "dynamic=1.7.0_31-from-mod"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/impl/dynamic-1.8.0_05.mod"),
-            Arrays.asList(
-                "[ini]",
-                "dynamic=1.8.0_05_from_mod"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/dynamic.mod"),
+            """
+            [depend]
+            main
+            impl/dynamic-${java.version}
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/impl/dynamic-1.7.0_31.mod"),
+            """
+            [ini]
+            dynamic=1.7.0_31-from-mod
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/impl/dynamic-1.8.0_05.mod"),
+            """
+            [ini]
+            dynamic=1.8.0_05_from_mod
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Arrays.asList(
+        List<String> runArgs = List.of(
             "java.version=1.8.0_05",
             "--modules=dynamic"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/main.xml".replace('/', File.separatorChar)
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/main.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/other.jar".replace('/', File.separatorChar)
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
